BuildHughes/translation-tool/inputs/source_meta/objects/BRAZIL_DSS_Webservice_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BRAZIL_EndpointURL__c</fullName>
        <label>BRAZIL_EndpointURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRAZIL_Password__c</fullName>
        <label>BRAZIL_Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRAZIL_UserName__c</fullName>
        <label>BRAZIL_UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BRAZIL_DSS_Webservice_Settings</label>
</CustomObject>